@@ -1,3 +1,7 @@
+2003-08-20  Michael Chastain  <mec@shout.net>
+
+	* gdbtypes.h (struct main_type): Rearrange to save space.
+
 2003-08-20  Michael Snyder  <msnyder@redhat.com>
 
 	* trad-frame.c: Comment typo fix.
